--- a/Dieren.html
+++ b/Dieren.html
@@ -49,7 +49,7 @@
   </tbody>
 </table><br>
 <h2>Nieuw dier toevoegen</h2>
-<form>
+<form name="myForm" onsubmit="return validateForm()">
 <input type="radio" name="diersoort" checked>Hond
 <input type="radio" name="diersoort">Kat<br>
   <label for="naam">Naam</label>
