--- a/Dieren.html
+++ b/Dieren.html
@@ -50,8 +50,8 @@
 </table><br>
 <h2>Nieuw dier toevoegen</h2>
 <form name="myForm" onsubmit="return validateForm()">
-<input type="radio" id="diersoort" name="diersoort" checked value="Hond">Hond
-<input type="radio" id="diersoort" name="diersoort" value="Kat">Kat<br>
+<input type="radio" id="diersoorthond" name="diersoort" value="Hond">Hond
+<input type="radio" id="diersoortkat" name="diersoort" value="Kat">Kat<br>
   <label for="naam">Naam</label>
   <input type="text" id="naam" onfocus="$('#verplicht').fadeIn(200);"/ onBlur="$('#verplicht').fadeOut(200);"><p id="verplicht">&nbsp;Dit veld is verplicht.</p>
   <br><br>
